[Upd] npm package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "login-component",
-  "version": "0.0.0",
+  "name": "@caliatys/login-component",
+  "description": "JavaScript library that provides a login component for Angular",
+  "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
