--- a/projects/login-form/package.json
+++ b/projects/login-form/package.json
@@ -6,6 +6,7 @@
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/material": "^6.0.0-rc.0 || ^6.0.0",
     "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.0.0"
+    "rxjs-compat": "^6.0.0",
+    "bootstrap": "^4.0.0"
   }
 }
