--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "LoginComponent": {
+    "login-form-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/LoginComponent",
+            "outputPath": "dist/login-form-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -50,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "LoginComponent:build"
+            "browserTarget": "login-form-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "LoginComponent:build:production"
+              "browserTarget": "login-form-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "LoginComponent:build"
+            "browserTarget": "login-form-app:build"
           }
         },
         "test": {
@@ -95,7 +95,7 @@
         }
       }
     },
-    "LoginComponent-e2e": {
+    "login-form-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,7 +103,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "LoginComponent:serve"
+            "devServerTarget": "login-form-app:serve"
           }
         },
         "lint": {
@@ -121,7 +121,7 @@
       "root": "projects/login-form",
       "sourceRoot": "projects/login-form/src",
       "projectType": "library",
-      "prefix": "enl",
+      "prefix": "cal",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
@@ -158,5 +158,5 @@
       }
     }
   },
-  "defaultProject": "LoginComponent"
+  "defaultProject": "login-form-app"
 }
