--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "login-form-app",
   "description": "JavaScript library that provides a login component for Angular",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -13,7 +13,7 @@
     "build_lib": "ng build --prod login-form",
     "npm_pack": "cd dist/login-form && npm pack",
     "package": "npm run build_lib && npm run npm_pack",
-    "npm_publish": "cd dist/login-form && npm publish --access=public"
+    "npm_publish": "npm run package && cd dist/login-form && npm publish --access=public"
   },
   "private": false,
   "dependencies": {
