--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "login-form-app",
   "description": "JavaScript library that provides a login component for Angular",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "author": "Nicolas Roehm <nicolas.roehm@gmail.com>",
   "license": "MIT",
   "private": false,
@@ -14,6 +14,10 @@
     "typescript",
     "javascript"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Caliatys/LoginComponent.git"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
