--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@angular/router": "^6.0.3",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
+    "angularx-qrcode": "^1.1.7",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
