--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,10 @@
             "styles": [
               "src/assets/sass/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/dat.gui/build/dat.gui.js",
+              "./src/assets/js/debugcss.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -74,7 +77,10 @@
             "styles": [
               "src/assets/sass/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "./node_modules/dat.gui/build/dat.gui.js",
+              "./src/assets/js/debugcss.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
