--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "angularx-qrcode": "^1.1.7",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "dat.gui": "0.7.2",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
